manifests/policy/policy-api-to-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-to-mysql
  namespace: mysql-db
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
        project: transfer
      podSelector:
        matchLabels:
          app: python-api
    ports:
    - protocol: TCP
      port: 3306
