manifests/policy/policy-web-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-to-redis
  namespace: redis-cache
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
 
  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
        project: sale
        project: vote 
      podSelector:
        matchLabels:
          app: python-web
          app: vote
    ports:
    - protocol: TCP
      port: 6379
